test/pointer/fail/ptr_cl03.v3
//@execute false=33; true=11
component ptr_cl03 {
	var ap: Array<int> = [11];
	var aq: Array<int> = [33];
	def main(x: bool) -> int {
		var p = Pointer.atContents(ap), q = Pointer.atContents(aq);
		var f = if(x, p.load<int>, q.load<int>);
		return load(f);
	}
	def load(f: void -> int) -> int {
		return f();
	}
}
